--- a/apps/benchmarks/package.json
+++ b/apps/benchmarks/package.json
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "@fluentui/react": "^8.72.3",
+    "@reduxjs/toolkit": "^1.8.2",
     "react": ">=16.8.0 <18.0.0",
-    "react-dom": ">=16.8.0 <18.0.0"
+    "react-dom": ">=16.8.0 <18.0.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@fluentui/eslint-plugin": "*",
