--- a/apps/benchmarks/package.json
+++ b/apps/benchmarks/package.json
@@ -22,7 +22,9 @@
     "@reduxjs/toolkit": "^1.8.2",
     "react": ">=16.8.0 <18.0.0",
     "react-dom": ">=16.8.0 <18.0.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.7"
   },
   "devDependencies": {
     "@fluentui/eslint-plugin": "*",
