--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@azure/data-tables": "13.0.0",
     "@babel/core": "7.14.8",
     "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/plugin-proposal-decorators": "7.18.10",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.14.5",
     "@babel/plugin-proposal-optional-chaining": "7.14.5",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
@@ -86,6 +87,7 @@
     "@griffel/eslint-plugin": "1.0.0",
     "@griffel/jest-serializer": "1.0.9",
     "@griffel/react": "^1.3.0",
+    "@griffel/webpack-extraction-plugin": "0.1.4",
     "@griffel/webpack-loader": "2.0.12",
     "@microsoft/api-extractor": "7.18.1",
     "@microsoft/eslint-plugin-sdl": "0.1.9",
@@ -111,6 +113,7 @@
     "@storybook/manager-webpack5": "6.5.5",
     "@storybook/react": "6.5.5",
     "@storybook/theming": "6.5.5",
+    "@swc/core": "1.2.220",
     "@testing-library/dom": "8.11.3",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
@@ -158,6 +161,7 @@
     "babel-plugin-tester": "10.1.0",
     "beachball": "2.18.0",
     "chalk": "4.1.0",
+    "chromedriver": "104.0.0",
     "ci-info": "3.2.0",
     "clean-webpack-plugin": "4.0.0",
     "cli-table3": "0.6.1",
@@ -192,10 +196,12 @@
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "6.1.0",
     "fs-extra": "8.1.0",
+    "geckodriver": "3.0.2",
     "glob": "7.2.0",
     "gulp": "^4.0.2",
     "gzip-size": "6.0.0",
     "html-webpack-plugin": "5.1.0",
+    "http-server": "14.1.1",
     "ignore-not-found-export-webpack-plugin": "1.0.2",
     "imports-loader": "1.2.0",
     "jest": "26.6.3",
@@ -213,6 +219,7 @@
     "lint-staged": "10.2.10",
     "loader-utils": "2.0.0",
     "memfs": "3.2.2",
+    "mini-css-extract-plugin": "2.6.1",
     "node-fetch": "2.6.7",
     "nx": "13.10.6",
     "portfinder": "1.0.28",
@@ -238,7 +245,9 @@
     "storybook-addon-performance": "0.14.0",
     "strip-ansi": "6.0.0",
     "style-loader": "2.0.0",
+    "swc-loader": "0.2.3",
     "syncpack": "5.6.10",
+    "tachometer": "0.7.0",
     "terser": "5.14.2",
     "terser-webpack-plugin": "5.3.1",
     "tmp": "0.2.1",
@@ -295,8 +304,7 @@
     "@types/react-dom": "16.9.14",
     "eslint": "7.25.0",
     "workspace-tools": "0.18.4",
-    "requestretry": "7.0.0",
-    "@fluentui/stress-test/ts-loader": "9.3.1"
+    "requestretry": "7.0.0"
   },
   "syncpack": {
     "prod": true,
