--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "lint:log:lerna": "FORCE_COLOR=0 lerna run lint --stream --no-bail > lint.log 2>&1",
     "perf": "cross-env PERF=true gulp perf --times=100",
     "perf:debug": "cross-env PERF=true gulp perf:debug --debug",
-    "postinstall": "node ./scripts/postinstall.js",
+    "postinstall": "patch-package",
     "preinstall": "node ./scripts/use-yarn-please.js",
     "publish:beachball": "beachball publish -b origin/master --access public -y",
     "rebuild": "node ./scripts/invalidate-just-cache.js && yarn build --reset-cache",
@@ -219,8 +219,8 @@
     "express": "4.17.1",
     "extract-comments": "1.1.0",
     "file-loader": "6.2.0",
-    "fork-ts-checker-webpack-plugin": "6.1.0",
     "find-free-port": "2.0.0",
+    "fork-ts-checker-webpack-plugin": "6.1.0",
     "fs-extra": "8.1.0",
     "geckodriver": "3.0.2",
     "glob": "7.2.0",
@@ -255,10 +255,12 @@
     "mini-css-extract-plugin": "2.6.1",
     "node-fetch": "2.6.7",
     "nx": "13.10.6",
+    "patch-package": "6.5.0",
     "portfinder": "1.0.28",
     "postcss": "8.3.5",
     "postcss-loader": "4.1.0",
     "postcss-modules": "4.1.3",
+    "postinstall-postinstall": "2.1.0",
     "prettier": "2.2.1",
     "pretty-bytes": "5.6.0",
     "progress": "2.0.3",
